--- a/intro_rpkg_lyu.html
+++ b/intro_rpkg_lyu.html
@@ -79,34 +79,19 @@ background-size: contain
 
 .pull-left[
 
---
+#### [&lt;span style="color: #5b7b75;display: block;margin-top: 120px;"&gt; Geocomputation with R &lt;/span&gt;](https://r.geocompx.org/)
 
-### [&lt;span style="color: #5b7b75;display: block;margin-top: 120px;"&gt; Geocomputation with R &lt;/span&gt;](https://r.geocompx.org/)
+#### [&lt;span style="color: #5b7b75;"&gt; Spatial Data Science With Applications in R &lt;/span&gt;](https://r-spatial.org/book/)
 
---
+#### [&lt;span style="color: #5b7b75;"&gt; Spatial data with terra &lt;/span&gt;](https://rspatial.org/spatial/index.html)
 
-### [&lt;span style="color: #5b7b75;"&gt; Spatial Data Science
-With Applications in R &lt;/span&gt;](https://r-spatial.org/book/)
+#### [&lt;span style="color: #5b7b75;"&gt; Introduction to BaseR &lt;/span&gt;](https://rspatial.org/intr/)
 
---
+#### [&lt;span style="color: #5b7b75;"&gt; Advanced R &lt;/span&gt;](https://adv-r.hadley.nz/)
 
-### [&lt;span style="color: #5b7b75;"&gt; Spatial data with terra &lt;/span&gt;](https://rspatial.org/spatial/index.html)
+#### [&lt;span style="color: #5b7b75;"&gt; R for Data Science (2e) &amp; tidyverse &lt;/span&gt;](https://r4ds.hadley.nz/)
 
---
-
-### [&lt;span style="color: #5b7b75;"&gt; Introduction to BaseR &lt;/span&gt;](https://rspatial.org/intr/)
-
---
-
-### [&lt;span style="color: #5b7b75;"&gt; Advanced R &lt;/span&gt;](https://adv-r.hadley.nz/)
-
---
-
-### [&lt;span style="color: #5b7b75;"&gt; R for Data Science (2e) &amp; tidyverse &lt;/span&gt;](https://r4ds.hadley.nz/)
-
---
-
-### [&lt;span style="color: #5b7b75;"&gt; Unofficial Rcpp Api Documentation &lt;/span&gt;](https://thecoatlessprofessor.com/programming/cpp/unofficial-rcpp-api-documentation/)
+#### [&lt;span style="color: #5b7b75;"&gt; Unofficial Rcpp Api Documentation &lt;/span&gt;](https://thecoatlessprofessor.com/programming/cpp/unofficial-rcpp-api-documentation/)
 
 ]
 
@@ -117,9 +102,19 @@ With Applications in R &lt;/span&gt;](https://r-spatial.org/book/)
 ]
 
 ---
+class: inverse, middle, center
+background-image: url("https://spatlyu.github.io/materials/figures/ausgis_ppt_title_bg3.png")
+background-position: center
+background-size: contain
+
+# R packages developed by Wenbo Lv and his partners
+
+---
 background-image: url("https://spatlyu.github.io/materials/figures/ausgis_ppt_title_bg4.png")
 background-position: center
 background-size: contain
+
+--
 
 .pull-left[
 
@@ -144,6 +139,8 @@ background-size: contain
 - [geocomplexity](https://ausgis.github.io/geocomplexity/)
 
 ]
+
+--
 
 .pull-right[
 &lt;img src="./assets/pkgs_lyu.png" width="80%" height="50%" style="display: block; margin: auto;" /&gt;
@@ -393,8 +390,8 @@ Sustained community vitality
 
 --
 
-<div class="plotly html-widget html-fill-item" id="htmlwidget-bd75e63704e0082df3e0" style="width:100%;height:400px;"></div>
-<script type="application/json" data-for="htmlwidget-bd75e63704e0082df3e0">{"x":{"visdat":{"5de094c3739":["function () ","plotlyVisDat"]},"cur_data":"5de094c3739","attrs":{"5de094c3739":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"},"5de094c3739.1":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":["2024-03-05 00:00:00.000000","2025-12-24 00:00:00.000000"],"y":3,"line":{"color":"#8DD3C7","width":100},"showlegend":false,"hoverinfo":"text","text":"<b>Step 1<\/b><br>from <b>2024-03-05<\/b> to <b>2025-12-24<\/b>","inherit":true},"5de094c3739.2":{"mode":"text","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":"2025-01-28 12:00:00.000000","y":3,"text":"Step 1","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","inherit":true},"5de094c3739.3":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":["2025-12-25 00:00:00.000000","2030-12-25 00:00:00.000000"],"y":2,"line":{"color":"#FFFFB3","width":100},"showlegend":false,"hoverinfo":"text","text":"<b>Step 2<\/b><br>from <b>2025-12-25<\/b> to <b>2030-12-25<\/b>","inherit":true},"5de094c3739.4":{"mode":"text","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":"2028-06-25 00:00:00.000000","y":2,"text":"Step 2","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","inherit":true},"5de094c3739.5":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":["2030-12-30 00:00:00.000000","2035-01-01 00:00:00.000000"],"y":1,"line":{"color":"#BEBADA","width":100},"showlegend":false,"hoverinfo":"text","text":"<b>Step 3<\/b><br>from <b>2030-12-30<\/b> to <b>2035-01-01<\/b>","inherit":true},"5de094c3739.6":{"mode":"text","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":"2032-12-30 12:00:00.000000","y":1,"text":"Step 3","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"hovermode":"closest","plot_bgcolor":"#FCFCFC","xaxis":{"domain":[0,1],"automargin":true,"linewidth":1,"mirror":true,"showgrid":true,"gridcolor":"grey90","title":""},"yaxis":{"domain":[0,1],"automargin":true,"linewidth":1,"mirror":true,"range":[0,4],"showgrid":false,"title":"","tickmode":"array","tickvals":[2],"ticktext":[""]},"showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"data":[{"mode":"lines","type":"scatter","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"lines","type":"scatter","x":["2024-03-05 00:00:00.000000","2025-12-24 00:00:00.000000"],"y":[3,3],"line":{"color":"#8DD3C7","width":100},"showlegend":false,"hoverinfo":["text","text"],"text":["<b>Step 1<\/b><br>from <b>2024-03-05<\/b> to <b>2025-12-24<\/b>","<b>Step 1<\/b><br>from <b>2024-03-05<\/b> to <b>2025-12-24<\/b>"],"marker":{"color":"rgba(255,127,14,1)","line":{"color":"rgba(255,127,14,1)"}},"error_y":{"color":"rgba(255,127,14,1)"},"error_x":{"color":"rgba(255,127,14,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"text","type":"scatter","x":["2025-01-28 12:00:00.000000"],"y":[3],"text":"Step 1","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","marker":{"color":"rgba(44,160,44,1)","line":{"color":"rgba(44,160,44,1)"}},"error_y":{"color":"rgba(44,160,44,1)"},"error_x":{"color":"rgba(44,160,44,1)"},"line":{"color":"rgba(44,160,44,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"lines","type":"scatter","x":["2025-12-25 00:00:00.000000","2030-12-25 00:00:00.000000"],"y":[2,2],"line":{"color":"#FFFFB3","width":100},"showlegend":false,"hoverinfo":["text","text"],"text":["<b>Step 2<\/b><br>from <b>2025-12-25<\/b> to <b>2030-12-25<\/b>","<b>Step 2<\/b><br>from <b>2025-12-25<\/b> to <b>2030-12-25<\/b>"],"marker":{"color":"rgba(214,39,40,1)","line":{"color":"rgba(214,39,40,1)"}},"error_y":{"color":"rgba(214,39,40,1)"},"error_x":{"color":"rgba(214,39,40,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"text","type":"scatter","x":["2028-06-25 00:00:00.000000"],"y":[2],"text":"Step 2","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","marker":{"color":"rgba(148,103,189,1)","line":{"color":"rgba(148,103,189,1)"}},"error_y":{"color":"rgba(148,103,189,1)"},"error_x":{"color":"rgba(148,103,189,1)"},"line":{"color":"rgba(148,103,189,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"lines","type":"scatter","x":["2030-12-30 00:00:00.000000","2035-01-01 00:00:00.000000"],"y":[1,1],"line":{"color":"#BEBADA","width":100},"showlegend":false,"hoverinfo":["text","text"],"text":["<b>Step 3<\/b><br>from <b>2030-12-30<\/b> to <b>2035-01-01<\/b>","<b>Step 3<\/b><br>from <b>2030-12-30<\/b> to <b>2035-01-01<\/b>"],"marker":{"color":"rgba(140,86,75,1)","line":{"color":"rgba(140,86,75,1)"}},"error_y":{"color":"rgba(140,86,75,1)"},"error_x":{"color":"rgba(140,86,75,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"text","type":"scatter","x":["2032-12-30 12:00:00.000000"],"y":[1],"text":"Step 3","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","marker":{"color":"rgba(227,119,194,1)","line":{"color":"rgba(227,119,194,1)"}},"error_y":{"color":"rgba(227,119,194,1)"},"error_x":{"color":"rgba(227,119,194,1)"},"line":{"color":"rgba(227,119,194,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div class="plotly html-widget html-fill-item" id="htmlwidget-98027650f9ec6cc0a945" style="width:100%;height:400px;"></div>
+<script type="application/json" data-for="htmlwidget-98027650f9ec6cc0a945">{"x":{"visdat":{"2f8032966413":["function () ","plotlyVisDat"]},"cur_data":"2f8032966413","attrs":{"2f8032966413":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"},"2f8032966413.1":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":["2024-03-05 00:00:00.000000","2025-12-24 00:00:00.000000"],"y":3,"line":{"color":"#8DD3C7","width":100},"showlegend":false,"hoverinfo":"text","text":"<b>Step 1<\/b><br>from <b>2024-03-05<\/b> to <b>2025-12-24<\/b>","inherit":true},"2f8032966413.2":{"mode":"text","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":"2025-01-28 12:00:00.000000","y":3,"text":"Step 1","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","inherit":true},"2f8032966413.3":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":["2025-12-25 00:00:00.000000","2030-12-25 00:00:00.000000"],"y":2,"line":{"color":"#FFFFB3","width":100},"showlegend":false,"hoverinfo":"text","text":"<b>Step 2<\/b><br>from <b>2025-12-25<\/b> to <b>2030-12-25<\/b>","inherit":true},"2f8032966413.4":{"mode":"text","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":"2028-06-25 00:00:00.000000","y":2,"text":"Step 2","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","inherit":true},"2f8032966413.5":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":["2030-12-30 00:00:00.000000","2035-01-01 00:00:00.000000"],"y":1,"line":{"color":"#BEBADA","width":100},"showlegend":false,"hoverinfo":"text","text":"<b>Step 3<\/b><br>from <b>2030-12-30<\/b> to <b>2035-01-01<\/b>","inherit":true},"2f8032966413.6":{"mode":"text","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":"2032-12-30 12:00:00.000000","y":1,"text":"Step 3","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"hovermode":"closest","plot_bgcolor":"#FCFCFC","xaxis":{"domain":[0,1],"automargin":true,"linewidth":1,"mirror":true,"showgrid":true,"gridcolor":"grey90","title":""},"yaxis":{"domain":[0,1],"automargin":true,"linewidth":1,"mirror":true,"range":[0,4],"showgrid":false,"title":"","tickmode":"array","tickvals":[2],"ticktext":[""]},"showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"data":[{"mode":"lines","type":"scatter","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"lines","type":"scatter","x":["2024-03-05 00:00:00.000000","2025-12-24 00:00:00.000000"],"y":[3,3],"line":{"color":"#8DD3C7","width":100},"showlegend":false,"hoverinfo":["text","text"],"text":["<b>Step 1<\/b><br>from <b>2024-03-05<\/b> to <b>2025-12-24<\/b>","<b>Step 1<\/b><br>from <b>2024-03-05<\/b> to <b>2025-12-24<\/b>"],"marker":{"color":"rgba(255,127,14,1)","line":{"color":"rgba(255,127,14,1)"}},"error_y":{"color":"rgba(255,127,14,1)"},"error_x":{"color":"rgba(255,127,14,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"text","type":"scatter","x":["2025-01-28 12:00:00.000000"],"y":[3],"text":"Step 1","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","marker":{"color":"rgba(44,160,44,1)","line":{"color":"rgba(44,160,44,1)"}},"error_y":{"color":"rgba(44,160,44,1)"},"error_x":{"color":"rgba(44,160,44,1)"},"line":{"color":"rgba(44,160,44,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"lines","type":"scatter","x":["2025-12-25 00:00:00.000000","2030-12-25 00:00:00.000000"],"y":[2,2],"line":{"color":"#FFFFB3","width":100},"showlegend":false,"hoverinfo":["text","text"],"text":["<b>Step 2<\/b><br>from <b>2025-12-25<\/b> to <b>2030-12-25<\/b>","<b>Step 2<\/b><br>from <b>2025-12-25<\/b> to <b>2030-12-25<\/b>"],"marker":{"color":"rgba(214,39,40,1)","line":{"color":"rgba(214,39,40,1)"}},"error_y":{"color":"rgba(214,39,40,1)"},"error_x":{"color":"rgba(214,39,40,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"text","type":"scatter","x":["2028-06-25 00:00:00.000000"],"y":[2],"text":"Step 2","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","marker":{"color":"rgba(148,103,189,1)","line":{"color":"rgba(148,103,189,1)"}},"error_y":{"color":"rgba(148,103,189,1)"},"error_x":{"color":"rgba(148,103,189,1)"},"line":{"color":"rgba(148,103,189,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"lines","type":"scatter","x":["2030-12-30 00:00:00.000000","2035-01-01 00:00:00.000000"],"y":[1,1],"line":{"color":"#BEBADA","width":100},"showlegend":false,"hoverinfo":["text","text"],"text":["<b>Step 3<\/b><br>from <b>2030-12-30<\/b> to <b>2035-01-01<\/b>","<b>Step 3<\/b><br>from <b>2030-12-30<\/b> to <b>2035-01-01<\/b>"],"marker":{"color":"rgba(140,86,75,1)","line":{"color":"rgba(140,86,75,1)"}},"error_y":{"color":"rgba(140,86,75,1)"},"error_x":{"color":"rgba(140,86,75,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"text","type":"scatter","x":["2032-12-30 12:00:00.000000"],"y":[1],"text":"Step 3","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","marker":{"color":"rgba(227,119,194,1)","line":{"color":"rgba(227,119,194,1)"}},"error_y":{"color":"rgba(227,119,194,1)"},"error_x":{"color":"rgba(227,119,194,1)"},"line":{"color":"rgba(227,119,194,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 
 ---
 class: center, middle
