--- a/intro_rpkg_lyu.html
+++ b/intro_rpkg_lyu.html
@@ -8,15 +8,6 @@
     <script src="libs/header-attrs-2.28/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
-    <link href="libs/htmltools-fill-0.5.8.1/fill.css" rel="stylesheet" />
-    <script src="libs/htmlwidgets-1.6.4/htmlwidgets.js"></script>
-    <script src="libs/plotly-binding-4.10.4/plotly.js"></script>
-    <script src="libs/typedarray-0.1/typedarray.min.js"></script>
-    <script src="libs/jquery-3.5.1/jquery.min.js"></script>
-    <link href="libs/crosstalk-1.2.1/css/crosstalk.min.css" rel="stylesheet" />
-    <script src="libs/crosstalk-1.2.1/js/crosstalk.min.js"></script>
-    <link href="libs/plotly-htmlwidgets-css-2.11.1/plotly-htmlwidgets.css" rel="stylesheet" />
-    <script src="libs/plotly-main-2.11.1/plotly-latest.min.js"></script>
   </head>
   <body>
     <textarea id="source">
@@ -147,251 +138,12 @@ background-size: contain
 ]
 
 ---
-background-image: url("https://spatlyu.github.io/materials/figures/ausgis_ppt_title_bg3.png")
-background-position: center
-background-size: contain, 50% 50%, cover
-
-## 1. Based on Spatial Statistics
-
---
-
-- **Spatial Dependence** &amp; **Spatial Association**
-
---
-
-- **Spatial Heterogeneity**
-
---
-
-- **Spatial Similarity**
-
---
-
-[On spatial effects in geographical analysis](https://www.geog.com.cn/EN/10.11821/dlxb202303001)
-
-[Geodetector: Principle and prospective](https://doi.org/10.11821/dlxb201701010)
-
-[Modeling of spatial stratified heterogeneity](https://doi.org/10.1080/15481603.2022.2126375)
-
-[Statistical Modeling of Spatially Stratified Heterogeneous Data](https://doi.org/10.1080/24694452.2023.2289982)
-
-[Causal inference in spatial statistics](https://www.sciencedirect.com/science/article/pii/S2211675322000173)
-
-[Spatial Causality: A Systematic Review on Spatial Causal Inference](https://onlinelibrary.wiley.com/doi/abs/10.1111/gean.12312)
-
----
-background-image: url("https://spatlyu.github.io/materials/figures/ausgis_ppt_title_bg3.png")
-background-position: center
-background-size: contain, 50% 50%, cover
-
-## 2. Based on Spatial Econometrics
-
---
-
-- **Regression Discontinuity Design**
-
---
-
-- **Difference In Difference**
-
---
-
-[Conduct Multiple Types of Geographic Regression Discontinuity Designs(SpatialRDD)](https://axlehner.github.io/SpatialRDD/index.html)
-
-[Spatial Difference-in-differences (SpatialDID)](https://www.sciencedirect.com/science/article/pii/S0165176515004371)
-
-[Evidence on the impact of sustained exposure to air pollution on life expectancy from China’s Huai River policy](https://www.pnas.org/doi/full/10.1073/pnas.1300018110)
-
----
+class: inverse, middle, center
 background-image: url("https://spatlyu.github.io/materials/figures/ausgis_ppt_title_bg3.png")
 background-position: center
 background-size: contain
 
-## 3. Based on Spatial Epidemiology
-
---
-
-- **Spatial Causal Mediation Analysis**
-
---
-
-- **Agent-Based Modeling** 
-
---
-
-- **Bayesian Spatial Models**
-
---
-
-- **Spatial Survival Analysis**
-
---
-
-- **Spatial Propensity Score Matching**
-
---
-
-[Bayesian inference with INLA](https://becarioprecario.bitbucket.io/inla-gitbook/)
-
-[Dynamic Time Series Models using R-INLA: An Applied Perspective](https://ramanbala.github.io/dynamic-time-series-models-R-INLA/)
-
-[Advanced Spatial Modeling with Stochastic Partial Differential Equations Using R and INLA ](https://becarioprecario.bitbucket.io/spde-gitbook/)
-
-[Geospatial Health Data: Modeling and Visualization with R-INLA and Shiny](https://www.paulamoraga.com/book-geospatial/)
-
----
-
-## 4. Based on Causal Machine Learning
-
---
-
-- **Causal Graph Learning**
-
---
-
-- **Causal Forest**
-
---
-
-and so on (I don't know much about it)
-
---
-
-[**DoWhy** documentation](https://www.pywhy.org/dowhy)
-
-[**CausalML** documentation](https://causalml.readthedocs.io/en/latest/about.html)
-
-
----
-
-## 5.  Based on Dynamic  Systems  Modeling
-
---
-
-- **Temporal State space reconstruction**
-
---
-
-- **Spatial State space reconstruction**
-
---
-
-[Detecting Causality in Complex Ecosystems](https://www.science.org/doi/10.1126/science.1227079)
-
-[Partial cross mapping eliminates indirect causal influences](https://www.nature.com/articles/s41467-020-16238-0)
-
-[Detecting Causality from Nonlinear Dynamics with Short-term Time Series](https://www.nature.com/articles/srep07464)
-
-[Inferring causation from time series in Earth system sciences](https://www.nature.com/articles/s41467-019-10105-3)
-
-[Spatial convergent cross mapping to detect causal relationships from short time series](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1890/14-1479.1)
-
-[Causal inference from cross-sectional earth system data with geographical convergent cross mapping](https://www.nature.com/articles/s41467-023-41619-6)
-
-
----
-class: inverse, middle, center
-
-# Spatial Causal Inference Ecosystem in R language
-
----
-
-### Related Ecosystem
-
---
-
-Data Clean -&gt; tidyverse
-
---
-
-Statistics Inference -&gt; tidymodel &amp; easystats
-
---
-
-Bayesian -&gt; INLA &amp; Stan &amp; tidybayes &amp; R2WinBUGS
-
---
-
-Machine Learning -&gt; mlr3verse &amp; h2o
-
---
-
-Deep Learning -&gt; torch &amp; tensorflow &amp; keras &amp; mxnet
-
---
-
-Geospatial Processing -&gt;  sf &amp; terra &amp; stars &amp; whitebox &amp; qgisprocess
-
---
-
-Spatial Statistics -&gt; spdep &amp; spatstat &amp; spatialreg &amp; gstat &amp; GD &amp; GWmodel
-
---
-
-### Causal Inference In R
-
---
-
-[`CRAN Views : Causal Inference`](https://cran.r-project.org/web/views/CausalInference.html)
-
-
---
-
-### So, Where is the unified framework of spatial causal inference in R?
-
----
-class: inverse, middle, center
-
-# spcausal : A Framework for Spatial Causal Inference
-
----
-
-## Problems to be solved
-
---
-
-[Two Language Problem](https://scientificcoder.com/how-to-solve-the-two-language-problem)
-
---
-
-Complex interdisciplinary and cross-programming language background
-
---
-
-Diverse and robust algorithm integration
-
---
-
-User-friendly API
-
---
-
-Comprehensive reference documentation
-
---
-
-Sustained community vitality
-
----
-
-## What will we do?
-
---
-
-- Testing and development of the original algorithm in R version
-
---
-
-- Further optimization of the computation process
-
---
-
-- Expanding to other programming languages
-
---
-
-<div class="plotly html-widget html-fill-item" id="htmlwidget-98027650f9ec6cc0a945" style="width:100%;height:400px;"></div>
-<script type="application/json" data-for="htmlwidget-98027650f9ec6cc0a945">{"x":{"visdat":{"2f8032966413":["function () ","plotlyVisDat"]},"cur_data":"2f8032966413","attrs":{"2f8032966413":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"},"2f8032966413.1":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":["2024-03-05 00:00:00.000000","2025-12-24 00:00:00.000000"],"y":3,"line":{"color":"#8DD3C7","width":100},"showlegend":false,"hoverinfo":"text","text":"<b>Step 1<\/b><br>from <b>2024-03-05<\/b> to <b>2025-12-24<\/b>","inherit":true},"2f8032966413.2":{"mode":"text","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":"2025-01-28 12:00:00.000000","y":3,"text":"Step 1","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","inherit":true},"2f8032966413.3":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":["2025-12-25 00:00:00.000000","2030-12-25 00:00:00.000000"],"y":2,"line":{"color":"#FFFFB3","width":100},"showlegend":false,"hoverinfo":"text","text":"<b>Step 2<\/b><br>from <b>2025-12-25<\/b> to <b>2030-12-25<\/b>","inherit":true},"2f8032966413.4":{"mode":"text","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":"2028-06-25 00:00:00.000000","y":2,"text":"Step 2","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","inherit":true},"2f8032966413.5":{"mode":"lines","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":["2030-12-30 00:00:00.000000","2035-01-01 00:00:00.000000"],"y":1,"line":{"color":"#BEBADA","width":100},"showlegend":false,"hoverinfo":"text","text":"<b>Step 3<\/b><br>from <b>2030-12-30<\/b> to <b>2035-01-01<\/b>","inherit":true},"2f8032966413.6":{"mode":"text","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter","x":"2032-12-30 12:00:00.000000","y":1,"text":"Step 3","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"hovermode":"closest","plot_bgcolor":"#FCFCFC","xaxis":{"domain":[0,1],"automargin":true,"linewidth":1,"mirror":true,"showgrid":true,"gridcolor":"grey90","title":""},"yaxis":{"domain":[0,1],"automargin":true,"linewidth":1,"mirror":true,"range":[0,4],"showgrid":false,"title":"","tickmode":"array","tickvals":[2],"ticktext":[""]},"showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"data":[{"mode":"lines","type":"scatter","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"lines","type":"scatter","x":["2024-03-05 00:00:00.000000","2025-12-24 00:00:00.000000"],"y":[3,3],"line":{"color":"#8DD3C7","width":100},"showlegend":false,"hoverinfo":["text","text"],"text":["<b>Step 1<\/b><br>from <b>2024-03-05<\/b> to <b>2025-12-24<\/b>","<b>Step 1<\/b><br>from <b>2024-03-05<\/b> to <b>2025-12-24<\/b>"],"marker":{"color":"rgba(255,127,14,1)","line":{"color":"rgba(255,127,14,1)"}},"error_y":{"color":"rgba(255,127,14,1)"},"error_x":{"color":"rgba(255,127,14,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"text","type":"scatter","x":["2025-01-28 12:00:00.000000"],"y":[3],"text":"Step 1","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","marker":{"color":"rgba(44,160,44,1)","line":{"color":"rgba(44,160,44,1)"}},"error_y":{"color":"rgba(44,160,44,1)"},"error_x":{"color":"rgba(44,160,44,1)"},"line":{"color":"rgba(44,160,44,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"lines","type":"scatter","x":["2025-12-25 00:00:00.000000","2030-12-25 00:00:00.000000"],"y":[2,2],"line":{"color":"#FFFFB3","width":100},"showlegend":false,"hoverinfo":["text","text"],"text":["<b>Step 2<\/b><br>from <b>2025-12-25<\/b> to <b>2030-12-25<\/b>","<b>Step 2<\/b><br>from <b>2025-12-25<\/b> to <b>2030-12-25<\/b>"],"marker":{"color":"rgba(214,39,40,1)","line":{"color":"rgba(214,39,40,1)"}},"error_y":{"color":"rgba(214,39,40,1)"},"error_x":{"color":"rgba(214,39,40,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"text","type":"scatter","x":["2028-06-25 00:00:00.000000"],"y":[2],"text":"Step 2","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","marker":{"color":"rgba(148,103,189,1)","line":{"color":"rgba(148,103,189,1)"}},"error_y":{"color":"rgba(148,103,189,1)"},"error_x":{"color":"rgba(148,103,189,1)"},"line":{"color":"rgba(148,103,189,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"lines","type":"scatter","x":["2030-12-30 00:00:00.000000","2035-01-01 00:00:00.000000"],"y":[1,1],"line":{"color":"#BEBADA","width":100},"showlegend":false,"hoverinfo":["text","text"],"text":["<b>Step 3<\/b><br>from <b>2030-12-30<\/b> to <b>2035-01-01<\/b>","<b>Step 3<\/b><br>from <b>2030-12-30<\/b> to <b>2035-01-01<\/b>"],"marker":{"color":"rgba(140,86,75,1)","line":{"color":"rgba(140,86,75,1)"}},"error_y":{"color":"rgba(140,86,75,1)"},"error_x":{"color":"rgba(140,86,75,1)"},"xaxis":"x","yaxis":"y","frame":null},{"mode":"text","type":"scatter","x":["2032-12-30 12:00:00.000000"],"y":[1],"text":"Step 3","textfont":{"family":"Arial","size":14,"color":"rgba(0,0,0,1)"},"textposition":"center","showlegend":false,"hoverinfo":"none","marker":{"color":"rgba(227,119,194,1)","line":{"color":"rgba(227,119,194,1)"}},"error_y":{"color":"rgba(227,119,194,1)"},"error_x":{"color":"rgba(227,119,194,1)"},"line":{"color":"rgba(227,119,194,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+# Tutorials for My Open Source Geospatial Packages
 
 ---
 class: center, middle
