--- a/intro_rpkg_lyu.html
+++ b/intro_rpkg_lyu.html
@@ -134,7 +134,7 @@ background-size: contain
 --
 
 .pull-right[
-&lt;img src="./assets/pkgs_lyu.png" width="80%" height="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="./assets/pkgs_lyu.png" style="margin-top: 120px; width: 80%; height: auto;" /&gt;
 ]
 
 ---
@@ -176,7 +176,7 @@ ggplot(data = province_albers) +
 --
 
 .pull-right[
-&lt;img src="./assets/fig1.png" style="margin-top: 120px; width: 50%; height: auto;" /&gt;
+&lt;img src="./assets/fig1.png" style="margin-top: 120px; width: 80%; height: auto;" /&gt;
 ]
 
 ---
