--- a/intro_rpkg_lyu.html
+++ b/intro_rpkg_lyu.html
@@ -200,7 +200,7 @@ ggplot(data = world1) +
   theme_bw()
 ```
 
-&lt;img src="intro_rpkg_lyu_files/figure-html/world1-1.png" width="50%" height="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="assets/figures/world1-1.png" width="50%" height="50%" style="display: block; margin: auto;" /&gt;
 
 ]
 
@@ -220,7 +220,7 @@ ggplot(data = world2) +
   theme_bw()
 ```
 
-&lt;img src="intro_rpkg_lyu_files/figure-html/world2-1.png" width="50%" height="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="assets/figures/world2-1.png" width="50%" height="50%" style="display: block; margin: auto;" /&gt;
 
 ]
 
